[package]
name = "fb-unarchive"
version = "0.1.0"
authors = ["Alex Crawford <fb-unarchive@code.acrawford.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
chrono = { version = "0.4.13", features = ["serde"] }
env_logger = "0.7.1"
log = "0.4.11"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
structopt = "0.3.15"
